--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
   },
   "devDependencies": {
     "@vue/test-utils": "^1.0.0-beta.27",
+    "@fortawesome/vue-fontawesome": "0.1.6",
+    "@fortawesome/fontawesome-svg-core": "1.2.21",
+    "@fortawesome/free-solid-svg-icons": "5.10.1",
+    "@fortawesome/free-brands-svg-icons": "5.10.1",
     "ava": "^2.2.0",
     "browser-env": "^3.2.5",
     "eslint-config-prettier": "^4.1.0",
