Generate pdf from site 3 secs after release

--- a/.drone.yml
+++ b/.drone.yml
@@ -21,3 +21,6 @@ pipeline:
       branch: master
     script:
       - systemctl restart hanneko-cv
+      - sleep 3
+      - node generate-pdf.js
+      - mv cv_hanneko_*.pdf /home/niklasmh/hanneko/build
