--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "mysql": "^2.17.1",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "puppeteer": "^1.19.0"
   },
   "devDependencies": {
-    "@vue/test-utils": "^1.0.0-beta.27",
-    "@fortawesome/vue-fontawesome": "0.1.6",
     "@fortawesome/fontawesome-svg-core": "1.2.21",
-    "@fortawesome/free-solid-svg-icons": "5.10.1",
     "@fortawesome/free-brands-svg-icons": "5.10.1",
+    "@fortawesome/free-solid-svg-icons": "5.10.1",
+    "@fortawesome/vue-fontawesome": "0.1.6",
+    "@vue/test-utils": "^1.0.0-beta.27",
     "ava": "^2.2.0",
     "browser-env": "^3.2.5",
     "eslint-config-prettier": "^4.1.0",
