Change WS before generating pdf

--- a/.drone.yml
+++ b/.drone.yml
@@ -21,6 +21,7 @@ pipeline:
       branch: master
     script:
       - systemctl restart hanneko-cv
+      - cd /home/niklasmh/hanneko-cv
       - sleep 3
       - node generate-pdf.js
       - mv cv_hanneko_*.pdf /home/niklasmh/hanneko/build
