--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     command: yarn start
     restart: always
     ports:
-      - ${DOCKER_PORT}:3000
+      - ${DOCKER_PORT:-3010}:3000
     volumes:
       - .:/srv/hanne:rw
     working_dir: /srv/hanne
